--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 
 body {
-    background-color: rgb(200,200,200);
-    color: rgb(0,0,0);
-    font-family: "Open Sans", sans-serif;
+    background-color: rgb(255,102,102);
+    color: rgb(153,0,0);
+    font-family: "Cursive", cursive;
     text-align: center;
 }
 
